# django-getpaid-elavon

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  conftest.py  factories.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
getpaid_elavon/: __init__.py  apps.py  client.py  processor.py  types.py  urls.py  utils.py  views.py
getpaid_elavon/tests/: test_client.py  test_processor.py
test_app/: models.py
tests/: README.md  settings.py  test_processor.py  urls.py
