[project]
name = "django-getpaid-elavon"
version = "0.1.0"
description = "django-getpaid processor for Elavon"
authors = [
    { name = "Order Group", email = "adam.przyborowski@ordergroup.pl" }
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
repository = "https://github.com/ordergroup/og-django-getpaid-elavon"
dependencies = [
    "django-getpaid>=2.3.0",
    "swapper>=1.1.2",
    "typing-extensions>=3.10.0",
    "requests>=2.25.1",
]

[project.optional-dependencies]
test = [
    "pytest>=6.2.4",
    "codecov>=2.1.11",
    "coverage>=5.5",
    "requests-mock>=1.9.3",
    "pytest-cov>=2.12.1",
    "pytest-django>=4.4.0",
    "pytest-factoryboy>=2.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=2.16.0",
    "factory-boy>=3.2.1",
    "ruff>=0.8.0",
    "tox>=3.24.4",
    "ipdb>=0.13.9",
]
test = [
    "pytest>=6.2.4",
    "codecov>=2.1.11",
    "coverage>=5.5",
    "requests-mock>=1.9.3",
    "pytest-cov>=2.12.1",
    "pytest-django>=4.4.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["getpaid_elavon"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["getpaid_elavon"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
